Use correct docker reg URL

--- a/manifests/kustomization.yaml
+++ b/manifests/kustomization.yaml
@@ -10,7 +10,7 @@ secretGenerator:
 
 images:
 - name: kube-1password-secrets
-  newName: docker.cloud.cluster.fun/averagemarcus/kube-1password-secrets
+  newName: docker.cluster.fun/averagemarcus/kube-1password-secrets
   newTag: latest
 
 resources:
