Updated to use informers
Signed-off-by: Marcus Noble <github@marcusnoble.co.uk>

--- a/manifests/rbac.yaml
+++ b/manifests/rbac.yaml
@@ -12,7 +12,7 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
-  verbs: ["get", "list", "update"]
+  verbs: ["get", "list", "update", "watch"]
 
 ---
 
